@@ -101,3 +101,4 @@ Changes in version 1.11.x
 + splitOn: update rowTree fix
 + perSampleDominantFeatures: add new arguments (n, other.name, complete)
 + loadFromMetaphlan: support "taxonomy" column for specifying taxonomy
++ cluster: Overwrite old results instead of failing
